--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -4,6 +4,7 @@ html,body{
   height:100vh;
   margin:0;
   padding:0;
+  background-color:whitesmoke;
 }
 body{
   font-family:'Poppins',system-ui;
@@ -17,7 +18,6 @@ body{
   display:flex;
   justify-content:space-evenly;
   align-items:center;
-  backdrop-filter:blur(8px);
   color:white;
 }
 .navdiv .options{
@@ -32,7 +32,7 @@ body{
   box-shadow:0px 0px 1px rgba(0,0,0,0.9);
   border-radius:5px;
 }
-.navdiv .search input,button{
+.navdiv .search input,.navdiv .search button{
   padding:3.5%;
   outline:none;
   border-style:none;
@@ -46,6 +46,10 @@ body{
   color:white;
   background-color:black;
 }
+.navdiv.scrolled{
+  backdrop-filter:blur(8px);
+  transition:.5s;
+}
 .Homediv{
   display:flex;
   align-items:center;
@@ -57,9 +61,71 @@ body{
   background-image:url(assets/logoback.png);
 }
 .Homediv .contentsdiv{
-  width:100%;
+  width:85%;
   display:flex;
+  padding:2%;
+  text-align:center;
+  flex-direction:column;
   align-items:center;
   justify-content: center;
-  background-color:rgba(255,255,255,0.3);
+  background-color:rgba(255,255,255,0.5);
+}
+.Homediv .contentsdiv button{
+  border:solid deeppink;
+  padding:1% 4%;
+  border-radius:30px;
+  font-weight:bold;
+  outline:none;
+  background-color:deeppink;
+  color:white;
+  font-family:'Poppins',system-ui;
+}
+.cakediv{
+  text-align:center;
+}
+.cakes{
+  text-align:center;
+  display:flex;
+  justify-content:center;
+  flex-wrap:wrap;
+  gap:30px;
+  width:95%;
+  margin:auto;
+}
+.cake{
+  flex:1 1 calc(33.333% - 30px);
+  background-color:white;
+  border-radius:10px;
+  overflow:hidden;
+  box-shadow:0px 0px 1.5px rgba(0,0,0,0.9);
+}
+.cakes .cake img{
+  width:100%;
+}
+.cake p{
+  width:80%;
+  margin:auto;
+}
+.cake div{
+  display:flex;
+  justify-content:center;
+  gap:3px;
+}
+.cake button{
+  padding:2%;
+  width:43%;
+  outline:none;
+  border:solid;
+  border-radius:30px;
+  color:white;
+  font-family:'Poppins',system-ui;
+}
+.cake .b1{
+  color:deeppink;
+  background-color:white;
+  border-color:deeppink;
+}
+.cake .b2{
+  background-color:deeppink;
+  border-color:deeppink;
 }
