--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -14,6 +14,7 @@ body{
   position:fixed;
   width:100%;
   z-index:2000;
+  flex-wrap:wrap;
 }
 .navdiv,.navdiv div{
   display:flex;
@@ -183,6 +184,7 @@ body{
 .ownerdiv{
   display:flex;
   justify-content: space-evenly;
+  flex-wrap:wrap;
 }
 .ownerdiv i{
   font-size:large;
@@ -212,6 +214,7 @@ body{
   display:flex;
   justify-content:space-evenly;
   align-items:center;
+  flex-wrap:wrap;
   color:white;
 }
 .socials{
@@ -226,4 +229,18 @@ body{
 }
 .heading{
   font-weight:bold;
+}
+@media(max-width:768px){
+  .cake{
+    flex:1 1 calc(50% - 20px);
+  }
+}
+@media(max-width:400px){
+  .cake{
+    flex:1 1 calc(100%);
+  }
+  .navdiv.scrolled .searchdiv,.navdiv .searchdiv{
+    display:none;
+  }
+
 }
