--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -66,7 +66,7 @@ body{
   background-repeat:no-repeat;
   background-size:cover;
   background-position:center;
-  background-image:url(assets/logoback.png);
+  background-image:url("assets/mainpagecake.jpg");
 }
 .Homediv .contentsdiv{
   width:85%;
@@ -76,6 +76,7 @@ body{
   flex-direction:column;
   align-items:center;
   justify-content: center;
+  backdrop-filter:blur(8px);
   background-color:rgba(255,255,255,0.5);
 }
 .Homediv .contentsdiv button{
